Set color on mobile tips to charcoal, some icon colors are too light

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -82,6 +82,7 @@ th.corner, td {
   /* not a child of the existing document so doesn't inherit font, I guess */
   font-family: 'Cantarell', sans-serif;
   font-size: 8pt;
+  color: #333;
   content: " " attr(title);
   user-select: none;
 }
